# elastML

./: .gitattributes  LICENSE  README.md  citations.bib  pyproject.toml  requirements.txt  setup.py
dataset/: mp_ids.json
elastML/: features.py  predict.py  utils.py
elastML/Bulk_models/: model_GBM  model_GPR  model_KNN  model_KRR  model_LR  model_MLP  model_RF  model_SVR
elastML/Shear_models/: model_GBM  model_GPR  model_KNN  model_KRR  model_LR  model_MLP  model_RF  model_SVR
elastML/mrmr_relevance/: relevance_Bulk_modulus.csv  relevance_Shear_modulus.csv
elastML/transform/: Transform_Bulk  Transform_GPR_Bulk  Transform_GPR_Shear  Transform_Shear
notebooks/: mrmr.ipynb  prediction.ipynb
