[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elastML"
version = "0.1.0"
authors = [
  { name="Suvo Banik", email="sbanik2@uic.edu"},
]
dependencies = [
            "dscribe==2.0.0",
            "joblib==1.2.0",
            "matminer==0.8.0",
            "numpy==1.23.4",
            "pandas==1.5.3",
            "pymatgen==2023.5.31",
            "scikit_learn==1.1.1",
            "tqdm>=4.64.0",
            "polars==0.18.3",
]
description = "Benchmarking Machine Learning Models for Predicting Elastic Properties of Materials"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

